--- a/lit.bib
+++ b/lit.bib
@@ -267,6 +267,17 @@
   timestamp = {2014.06.18}
 }
 
+@INPROCEEDINGS{AL14d,
+  author = {Berger, U. and James, P. and Lawrence, A. and Roggenbach, M. and
+	Seisenberger, M.},
+  title = {Modelling and Analysing the European Rail Traffic Management System
+	in Real Time Maude},
+  booktitle = {FTSCS},
+  year = {2014},
+  owner = {andylawrence},
+  timestamp = {2014.09.28}
+}
+
 @ARTICLE{AL13a,
   author = {Berger, U. and Lawrence, A. and Nordvall-Forsberg, F. and Seisenberger,
 	M.},
