--- a/BackgroundLogic.tex
+++ b/BackgroundLogic.tex
@@ -153,7 +153,7 @@ derivation & term \\ \hline
 
 \end{mydef}
 \medskip
-Minlog also allows for the use of the \emph{ex falso quodlibet} rule in order to perform proofs by contradiction. Such proof do not contain any computational content and it is typically used to prove properties about computations that never executed by the program.\\
+Minlog also allows for the use of the \emph{ex falso quodlibet} rule to derive falsity in a proof. Such proofs do not contain any computational content and it is typically used to prove properties about computations that are never executed by the program.\\
 \medskip
 \begin{mydef}[The Ex Falso Quodlibet Rule] \hspace*{0pt} \\
 \begin{center}
@@ -169,7 +169,7 @@ The stability rule is also included in the Minlog system, although I have not us
 \begin{mydef}[The Stability Rule] \hspace*{0pt} \\
 \begin{center}
 \AxiomC{$A \to \bot \to \bot$}
-\LeftLabel{efq}
+\LeftLabel{stab}
 \UnaryInfC{$A$}
 \DisplayProof 
 \end{center}
@@ -238,14 +238,14 @@ derivation & term \\ \hline
 \end{center}
 \bigskip
 \begin{myremark}[Minlog Specifics]
-The following is a list of implementations specifics which describe the particular way in which the Minlog system implements program extraction:
+The following is a list of implementation specifics which describe the particular way in which the Minlog system implements program extraction:
 
 \begin{itemize}
-\item The disjunction $\vee$ operation is defined as an inductive defined predicate \texttt{ori} with closure axioms instead of the rules 
+\item The disjunction $\vee$ operation is defined as an inductively defined predicate \texttt{ori} with closure axioms instead of  rules.
 
 \item $\exists$ is treated by axioms instead of rules.
 
-\item The nc-quantifiers are treated in the same way as their non-nc counter parts in terms of how natural deduction is implemented. 
+\item The nc-quantifiers (See Section \ref{sec:realizability})are treated in the same way as their non-nc counter parts in terms of how natural deduction is implemented. 
 
 \item Program constants are given computational behaviour using rewriting rules.
 
@@ -411,7 +411,7 @@ f Nil = z
 f (x :: xs) = G x xs(f xs)
 \end{lstlisting}
 
-\section{Realizability}
+\section{Realizability}\label{sec:realizability}
 We need to have a notion of what it means for an extracted program to realize
 a formula. The notion that we define to do this is called realizability which takes shape as a formula $r \textbf{r} A$. This can be read as
 a term $r$ realizes a formula $A$. If $\tau(A) \neq \epsilon$ then $r$ is of type $\tau (A)$,
@@ -492,11 +492,11 @@ r_1 \ \textbf{r} \ A \wedge r_2  \ \textbf{r} \ B & \quad \text{otherwise} \\
 \begin{mytheorem}
 \emph{(Soundness Theorem)}
 
-If $M$ is a proof of a formula $B$, then we can derive  $ \llbracket M \rrbracket \ \textbf{r} \ B$.
+If $M$ is a proof of a closed formula $B$, then we can derive  $ \llbracket M \rrbracket \ \textbf{r} \ B$.
 
 \begin{proof}
 
-The proof proceeds by performing induction on the proof term $M$ we omit further details.
+The proof proceeds by performing induction on the proof term $M$, we omit further details (See \ref{HS14}).
 
 \begin{comment}
 \begin{description}
