--- a/ECLSA.tex
+++ b/ECLSA.tex
@@ -124,13 +124,13 @@ The modified unit resolution proof system contains additional subsumption rules 
 \begin{mydef}[Modified Unit Resolution Proof System] The modified unit resolution proof system consists of four rules:
 \begin{center}
 %
-\AxiomC{$S \, l \, n \in \Gamma$}
+\AxiomC{$(S \, l \, n) \in \Gamma$}
 %\RightLabel{$\Sub \ C \subset C'$}
 \RightLabel{$\SplitSub$}
-\UnaryInfC{$ \{S \, l \, n \} \clmodres{\Gamma}{\Delta} \{ l \}$}
+\UnaryInfC{$ \{(S \, l \, n) \} \clmodres{\Gamma}{\Delta} \{ l \}$}
 \DisplayProof \
 %
-\AxiomC{$U \, l \, n \in \Gamma$}
+\AxiomC{$(U \, l \, n) \in \Gamma$}
 %\RightLabel{$\Sub \ C \subset C'$}
 \RightLabel{$\UnitSub$}
 \UnaryInfC{$ \emptyset \clmodres{\Gamma}{\Delta} \{ l \}$}
@@ -195,17 +195,17 @@ of three rules:
 \end{mydef}
 \hspace{0mm} \\
 \medskip
-We use the following abbreviation $\clmodres{\Gamma}{\Delta} C := \exists \Gamma_0 \subseteq \Gamma (\Gamma_0 \clmodres{\Gamma}{\Delta} C)$ in subsequent proofs where the the information regarding which decisions result resulted in the derivation of the clause $C$ is not needed. \\
+We use the following abbreviation $\clmodres{\Gamma}{\Delta} C := \exists \Gamma_0 \subseteq \Gamma (\Gamma_0 \clmodres{\Gamma}{\Delta} C)$ in subsequent proofs where  the information regarding which decisions result in the derivation of the clause $C$ is not needed. \\
 \medskip
 \begin{mytheorem}[Equivalence of Unit Resolution Proof Systems]
 \begin{align*}
-\forall \Gamma,\Delta,C ( \Gamma,\Delta \vdash_{URes} C  \leftrightarrow   \clmodres{\Gamma}{\Delta} C )
+\forall \Gamma,\Delta,C ( \Gamma,\Delta \vdash_{URes} C  \longleftrightarrow   \clmodres{\Gamma}{\Delta} C )
 \end{align*}
  We begin by proving $\Gamma,\Delta \vdash_{URes} C  \to   \clmodres{\Gamma}{\Delta} C$ by induction on the build up of $\Gamma, \Delta \vdash_{URes} C$. Here $\Gamma$ is seen as a set of unit clauses.
 \begin{description}
 
 \item[Case: $\Sub$]
-In the case that a subsumption was applied we perform a case distinction on whether the subsumed clause came from $\Gamma$ or $\Delta$. In the case that it came from $\Gamma$ we apply either $\UnitSub$ or $\SplitSub$ rules depending on the type of decision, otherwise in the case that the clause came from $\Delta$ we apply the $\Sub$ rule.
+In the case that a subsumption was applied we perform a case distinction on whether the subsumed clause came from $\Gamma$ or $\Delta$. In the case that it came from $\Gamma$ we apply either $\UnitSub$ or $\SplitSub$ rules depending on the type of decision, otherwise, in the case that the clause came from $\Delta$, we apply the $\Sub$ rule.
 \item[Case: $\Res$]
 The resolution rule is trivially equivalent to the other resolution rule by the two induction hypotheses.
 \end{description}
@@ -226,7 +226,7 @@ The resolution rule is trivially equivalent to the other resolution rule by the 
 %%
 %% Do we want a theorem stating that the modified resolution calculus derives the same clauses as the old resolution calculus?
 %%
-The soundness of the modified unit resolution proof system is proven by showing that if there is a derivation of a clause $C$ from a valuation $\Gamma$ and a formula $\Delta$ then $\Gamma$ and $\Delta$ model $C$. \\
+The soundness of the modified unit resolution proof system is proven by showing that if there is a derivation of a clause $C$ from a valuation $\Gamma$ and a formula $\Delta$, then $\Gamma$ and $\Delta$ model $C$. \\
 \medskip
 \begin{mytheorem}[Soundness of Unit Resolution]\label{thm:UResSoundness} \hspace*{0pt} \\
 \begin{center}
@@ -380,7 +380,7 @@ We have two sets of learned clauses $\Delta'$ and $\Delta''$ which do not contai
 
 \section{Storing Unit Resolution Derived Clauses}
 
-We now define a complete set of clause pairs $\DeltaVec$ such the the first component in each pair is contained within $\Delta$ and the second component is derived by the first via unit resolution to such an extent that it no longer contains any variables in common with $\Gamma$. \\
+We now define a complete set of clause pairs $\DeltaVec$ such the first component in each pair is contained within $\Delta$ and the second component is derived by the first via unit resolution to such an extent that it no longer contains any variables in common with $\Gamma$. \\
 \medskip
 \begin{mydef}
 \begin{align*}
